Class8/allow-tcp80-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tcp80-netpol 
spec:
  podSelector:
    matchLabels:
      env: qa
  ingress:
  - from:
    - podSelector:
        matchLabels:
          env: test
    ports:
    - protocol: TCP
      port: 80
